--- a/doc/report.tex
+++ b/doc/report.tex
@@ -359,17 +359,17 @@
 % use a multiple column layout for up to three different
 % affiliations
 \author{
-\IEEEauthorblockN{Author 1}
-\IEEEauthorblockA{ Electrical and\\Computer Engineering\\
+\IEEEauthorblockN{Yasser Al-Khder}
+\IEEEauthorblockA{ Mechatronics Engineering\\
 University of Waterloo\\
 Waterloo, Canada\\
-Email: author1@uwaterloo.ca}
+Email: yyalkhde@uwaterloo.ca}
 \and
-\IEEEauthorblockN{Author 2}
-\IEEEauthorblockA{Systems Desing Engineering\\
+\IEEEauthorblockN{Stephen Kraemer}
+\IEEEauthorblockA{Mechatronics Engineering\\
 University of Waterloo\\
 Waterloo, Canada\\
-Email: author2@uwaterloo.ca}
+Email: sbkraeme@uwaterloo.ca}
 }
 
 % conference papers do not typically use \thanks and this command
