fix quotation marks

--- a/doc/report.tex
+++ b/doc/report.tex
@@ -436,7 +436,7 @@ The abstract goes here. The abstract goes here. The abstract goes here. The abst
 
 
 \section{Introduction}
-With more than 100 million active daily users, and around 500 million posts, known as “tweets”, per day, Twitter is one of the largest social networks and blogging platforms, and a pioneer of the “microblogging” phenomenon. With its 140 characters per post limit, tweets are much shorter and concise compared to traditional blog entries. \\
+With more than 100 million active daily users, and around 500 million posts, known as ``tweets'', per day, Twitter is one of the largest social networks and blogging platforms, and a pioneer of the ``microblogging'' phenomenon. With its 140 characters per post limit, tweets are much shorter and concise compared to traditional blog entries. \\
 
 One of the most prominent and well-known features of Twitter is the hashtag. In Twitter, a hashtag is a set of characters, usually a word or several words, preceded by the hash symbol (\#). Hashtags serve several purposes in Twitter. Much like tags in traditional blogs and documents, and keywords in articles, hashtags allow users to categorize their tweets. This allows for tweets to be easily searched and analyzed based on tweets. Not all hashtags are used for tagging and categorization purposes. Many users add hashtags to their tweets in order to convey context and emotion, as well as enhance the tweeting experience in general. \\
 
@@ -444,7 +444,7 @@ This paper proposes the feasibility and the effectiveness of a building a hashta
 
 
 \section{Data Gathering}
-Twitter has a strong and easy to use application programming interface (API) for searching and retrieving tweets in a structured format. A script was used to search and retrieve tweets that included the most common words in the English language, such as “a”, “the”, and “or”. The script retrieved more than 300,000 thousand tweets that included hashtags. Another script was used to retrieve all tweets from a single user. This was used to train the classifier based on a user which is hypothesized to improve the performance of the classifier.
+Twitter has a strong and easy to use application programming interface (API) for searching and retrieving tweets in a structured format. A script was used to search and retrieve tweets that included the most common words in the English language, such as ``a'', ``the'', and ``or''. The script retrieved more than 300,000 thousand tweets that included hashtags. Another script was used to retrieve all tweets from a single user. This was used to train the classifier based on a user which is hypothesized to improve the performance of the classifier.
 
 
 \section{Pre-processing}
@@ -454,9 +454,9 @@ Firstly, tweets that did not include hashtags were discarded as they serve no pu
 
 The data that is sent back from Twitter contains many fields that are irrelevant to the suggester, such as profile picture URL and timestamp of tweet. While it was not necessary to extract the relative fields only, it is very beneficial to do so as it reduces the file size and processing time when it comes to building the classifier. After extracting only the required fields, the data was reduced to 5\% of the original file size. \\
 
-After that, efforts were focused on cleaning up the contents of the tweets (i.e. the text of the tweet). Tweets are very noisy in general. Other than the 140 character limit, there are virtually no other restrictions on the contents of the tweet. Several steps were taken to clean the tweets so that the classifier can use them appropriately. Firstly, URLs were removed from the tweets. Next, common words that don’t provide meaning or context were removed. Words such as “the”, “be”, and “to” are some of the most common words in the English language which can be found in any tweet regardless of the nature of the tweet, and more importantly the hashtags used with the tweet. This renders them practically useless for the classifier. Another feature that was removed from tweets is “mentions”. Mention is a feature in Twitter to tag users by preceding their username with the “@” symbol. Hashtags were also removed from tweets as not to include them in our feature set in the classifier. Twitter provides the hashtags used in the tweet in a separate field so removing hashtags from the tweets without losing them was relatively simple. Finally, non-alphabetic characters were removed and the remaining text was converted to lowercase. This prevents the classifier from registering the same word as different features due to capitalization and punctuation. \\
+After that, efforts were focused on cleaning up the contents of the tweets (i.e. the text of the tweet). Tweets are very noisy in general. Other than the 140 character limit, there are virtually no other restrictions on the contents of the tweet. Several steps were taken to clean the tweets so that the classifier can use them appropriately. Firstly, URLs were removed from the tweets. Next, common words that don’t provide meaning or context were removed. Words such as ``the'', ``be'', and ``to'' are some of the most common words in the English language which can be found in any tweet regardless of the nature of the tweet, and more importantly the hashtags used with the tweet. This renders them practically useless for the classifier. Another feature that was removed from tweets is ``mentions''. Mention is a feature in Twitter to tag users by preceding their username with the ``@'' symbol. Hashtags were also removed from tweets as not to include them in our feature set in the classifier. Twitter provides the hashtags used in the tweet in a separate field so removing hashtags from the tweets without losing them was relatively simple. Finally, non-alphabetic characters were removed and the remaining text was converted to lowercase. This prevents the classifier from registering the same word as different features due to capitalization and punctuation. \\
 
-One important thing to note about the cleaning of tweets is the fact that non-words (slang, acronyms, or plain gibberish) were not removed from the tweets. Removing such “words” would provide much cleaner dataset that only includes legitimate English words. However, Twitter does not restrict the contents of the tweet, and thus many users use slang words or terms that would help in categorizing the tweet. \\
+One important thing to note about the cleaning of tweets is the fact that non-words (slang, acronyms, or plain gibberish) were not removed from the tweets. Removing such ``words'' would provide much cleaner dataset that only includes legitimate English words. However, Twitter does not restrict the contents of the tweet, and thus many users use slang words or terms that would help in categorizing the tweet. \\
 
 \section{Building the Classifier}
 \subsection{Theory}
