add actual references

--- a/doc/report.tex
+++ b/doc/report.tex
@@ -120,8 +120,7 @@
 % http://www.ctan.org/tex-archive/macros/latex/contrib/cite/
 % The documentation is contained in the cite.sty file itself.
 
-
-
+\usepackage{fancyref}
 
 
 
@@ -460,21 +459,21 @@ One important thing to note about the cleaning of tweets is the fact that non-wo
 
 \section{Building the Classifier}
 \subsection{Theory}
-As mentioned previously, a naïve Bayes model was used to build the classifier. In its simplest form, the classifier will suggest the hashtag with the highest posterior given a set of words (i.e. the tweet). Equation (1) shows how Bayes rule can be used to calculate the posterior of a hashtag given a set of words.
-\begin{equation}
+As mentioned previously, a naïve Bayes model was used to build the classifier. In its simplest form, the classifier will suggest the hashtag with the highest posterior given a set of words (i.e. the tweet). Equation~\ref{eq:bayes} shows how Bayes rule can be used to calculate the posterior of a hashtag given a set of words.
+\begin{equation} \label{eq:bayes}
   p(C_i|\{x\}) = \frac{p(\{x\}|C_i)p(C_i)}{p(\{x\})}
 \end{equation}
 
-Where $C_i$ represents the ith hashtag and {x} represents the set of words in the tweet. Since naïve Bayes assumes independence of features, i.e. the probability of a word in a class is not affected by the other words in the set. The likelihood probability of a set of words {x} belonging to a hashtag $C_i$ can be represented as the product of the likelihood probability of each word belonging to that hashtag. Equation (2) shows this relation.
-\begin{equation}
+Where $C_i$ represents the ith hashtag and {x} represents the set of words in the tweet. Since naïve Bayes assumes independence of features, i.e. the probability of a word in a class is not affected by the other words in the set. The likelihood probability of a set of words {x} belonging to a hashtag $C_i$ can be represented as the product of the likelihood probability of each word belonging to that hashtag. Equation~\ref{eq:naive} shows this relation.
+\begin{equation} \label{eq:naive}
   p(\{x\}|C_i) = \prod_{i=1}^Np(x_i|C_i)
 \end{equation}
 
-The prior $p(C_i)$ will be equal for all hashtags and the term p({x}) will be discarded as it is independent of the hashtag being considered. This will result in a maximum likelihood (ML) probability for the classifier. The prior gives a great opportunity to weigh the hashtags differently. Hashtags can be weighed differently if they are more common to a user, or if they are trending for example. Section X (future considerations) will go into more details.
+The prior $p(C_i)$ will be equal for all hashtags and the term p({x}) will be discarded as it is independent of the hashtag being considered. This will result in a maximum likelihood (ML) probability for the classifier. The prior gives a great opportunity to weigh the hashtags differently. Hashtags can be weighed differently if they are more common to a user, or if they are trending for example. Section~\ref{sec:future} will go into more details.
 
 \subsection{Application}
 
-\section{Future Considerations}
+\section{Future Considerations} \label{sec:future}
 \subsection{Building Datasets}
 The feature set is built by iterating through the words in the processed tweets and adding the word to the set if it doesn’t exist in the set already. The same method is used to build the set of hashtags to consider. This makes our sets very large with a large number of features rarely occurring in our classes. One way to solve this is to only add a word to the feature set if it occurs over a certain threshold. The same can be done with hashtags. This is not particularly difficult to accomplish and will produce smaller data sets with more common words and suggestions. It is highly recommended to implement this in the future.
 
